# MyPythonFiles

./: .gitignore  .replit  Expenses.xlsx  README.md  accounts.py  cuecards.py  daily.csv  data.json  diet.py  exp.py  exp2.py  exp3.py  exp4 (copy).py  exp4.py  exp_later.py  expenses.json  find_env.py  globals.py  imgur.py  imgur_trial.py  json_functions.py  level_system.py  main.py  mindmap.py  mymods.py  need_to_add_to_main.py  output.json  pdf_funcs.py  pyproject.toml  replit.nix  settings.py  ss.py  tasks.json  tasks.py  tasks2.py  tasks3.py  tasks4.py  trial.py  trialcsv.py  troal.py  (+5 more)
Cue_cards_program/: my_modules.py  trial.py  trying.py  useful_functions.py
cue_cards/: prog2.py  program.py  trial.py  trying.py
database/: expenses (copy) 1.json  expenses (copy).json  expenses.json  mindmap_db.json  player_progress_db.json  tasks_db.json  tasks_db2.json  words.json
discord bot/: dis_bot.py
discord bot/2024/: dis_bot.py
discord_bot/2024/: config.json  dis_bot.py  disbot2.py  disbot3.py  disbot4.py  disbot5.py  env2.py  find_env.py  settings.py
discord_bot/2024/cogs/: basics.py  mind_map.py  mindmap.py
discord_bot/v2024/: __init__.py  dis_bot.py  disbot2.py  disbot3.py  disbot4.py  disbot5.py  mymodules.py  settings.py
discord_bot/v2024/cogs/: basics.py  data.json  mindmap.py  mymodules.py  (+1 more)
mindmap/: __init__.py  data.json  need_to_add_to_main.py  program.py  settings.py  trialrun.py
others/cue_cards/: program.py  trial.py  useful_functions.py
others/mindmap/: json_functions.py  settings.py
tasks/: program.py
tasks/database/: tasks_db.json
