[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "opencv-python>=4.10.0.84",
    "psutil>=6.1.0",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "speedtest>=0.0.1",
]
